--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Online Resume </title>
+  <title>Web profile </title>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap-iso.css">
   <link rel="icon" href="favicon/favicon1.ico">
@@ -33,7 +33,7 @@
     <div class="profile">
       <img class="profile-img" src="images/profile.png" alt="profile-image">
       <h2>Hello,</h2>
-      <p style="text-align: justify;">I am a python developer with 3.6 years of experience in the IT industry. I have worked in the process of excel automation. Furthermore, I have worked in data monitoring and reporting also.I have a basic knowledge of web development </p>
+      <p style="text-align: justify;">I am a python developer with 3.6 years of experience in the IT industry. I have worked in the process of excel automation. Furthermore, I have worked in data monitoring and reporting.I have a basic knowledge of web development </p>
     </div>
     <hr>
     <div class="profile">
